--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fast-sort": "^3.4.1",
     "next": "14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.6",
